--- a/templates/errors.html
+++ b/templates/errors.html
@@ -55,7 +55,7 @@
     </main>
 
     <footer class="mt-auto text-white-50" href="https://github.com/BorisLarkin">
-        <p class="text-white">Larkin Boris 2024</p>
+        <p class="text-white">Khomutinnikov Aleksandr</p>
     </footer>
 </div>
 </body>
