--- a/templates/results.html
+++ b/templates/results.html
@@ -69,7 +69,7 @@
         </table>
     </main>
 
-    <footer class="mt-auto text-white-50" href="https://github.com/BorisLarkin">
+    <footer class="mt-auto text-white-50" href="https://github.com/Leffrone/DZ_SIT">
         <p class="text-white">Khomutinnikov Aleksandr</p>
     </footer>
 </div>
