--- a/templates/errors.html
+++ b/templates/errors.html
@@ -54,7 +54,7 @@
         {{end}}
     </main>
 
-    <footer class="mt-auto text-white-50" href="https://github.com/BorisLarkin">
+    <footer class="mt-auto text-white-50" href="https://github.com/Leffrone/DZ_SIT">
         <p class="text-white">Khomutinnikov Aleksandr</p>
     </footer>
 </div>
