--- a/templates/syndromesArray.html
+++ b/templates/syndromesArray.html
@@ -52,7 +52,7 @@
         </div>
     </main>
 
-    <footer class="mt-auto text-white-50" href="https://github.com/BorisLarkin">
+    <footer class="mt-auto text-white-50" href="https://github.com/Leffrone/DZ_SIT">
         <p class="text-white">Khomutinnikov Aleksandr</p>
     </footer>
 </div>
